# DRE

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
DRE/colab/: __init__.py  convolve_gpu.py  dre_gpu.py  results.py
DRE/core/: ModelsIO.py  __init__.py  cuts.py  dre_cpu.py  models.py  results.py  statistics.py  summary.py
DRE/misc/: __init__.py  fit_parabola.py  h5py_compression.py  interpolation.py  progress_bar.py  read_catalog.py  read_psf.py
DRE/models/: modelbulge.fits
DRE/notebook/: __init__.py  dre_notebook.py  results.py
Example/: DRE_Example.ipynb
Source/: ModelsIO.py  crunch.py  dre_cpu.py  dre_gpu.py
Source/colab/: dre_gpu.py
scripts/: convolve.py  convolve_gpu.py  make_cuts.py  make_psf.py
