[metadata]
name = DRE-fjurcelay
version = 0.0.1
author = Cristobal Moya, Felipe Urcelay
author_email = fjurcelay@uc.cl
description = Discrete Radius Ellipticals
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Cnmoya/DRE
project_urls =
    Bug Tracker = https://github.com/Cnmoya/DRE/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = DRE
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src